# slack-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md  install.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
d2/: de1cd9252e42a9efa5deecd290ff885def58c3972c78268b748ba5eded98be--0001.ndjson
e5/: 2d7adb77ca8882c7f346c368848fae98a35e43d41daedab1cf576537ad136e--0001.ndjson
skills/slack/: AUTH.md  CHANNELS.md  SKILL.md
src/: lib.rs  main.rs
src/api/: client.rs  edge.rs  mod.rs  rate_limiter.rs  resolve.rs  types.rs  web.rs
src/auth/: browser.rs  mod.rs  oauth.rs  storage.rs  store.rs  tokens.rs
src/cli/: auth.rs  channels.rs  completions.rs  files.rs  messages.rs  mod.rs  reactions.rs  reminders.rs  root.rs  status.rs  users.rs
src/error/: mod.rs  types.rs
src/models/: channel.rs  file.rs  message.rs  mod.rs  reaction.rs  user.rs
src/output/: json.rs  mod.rs  plain.rs
src/utils/: mod.rs  time_limit.rs
tests/: api_resolve.rs  cli_auth.rs  cli_channels.rs  cli_messages.rs  cli_root.rs  integration_cli.rs  integration_suite.rs
tests/integration/: auth_storage_test.rs  auth_test.rs  channels_test.rs  common.rs  files_test.rs  messages_test.rs  mod.rs  search_test.rs
